--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/system": "^5.11.16",
     "@mui/x-date-pickers": "^6.0.4",
+    "@sirse-dev/safe-context": "^0.3.0",
     "@tauri-apps/api": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
