--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@sirse-dev/safe-context": "^0.3.0",
     "@tauri-apps/api": "^1.2.0",
+    "date-format-parse": "^0.2.7",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-number-format": "^5.1.4",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9"
   },
